RESOLVED FIXED257400
REGRESSION(262863@main) [Cocoa] video.buffered ranges are always empty; breaks Shaka Player
https://bugs.webkit.org/show_bug.cgi?id=257400
Summary REGRESSION(262863@main) [Cocoa] video.buffered ranges are always empty; break...
Jer Noble
Reported 2023-05-26 16:11:50 PDT
REGRESSION(262863@main) [Cocoa] video.buffered ranges are always empty; breaks Shaka Player
Attachments
Jer Noble
Comment 1 2023-05-26 16:11:58 PDT
Jer Noble
Comment 2 2023-05-26 16:18:33 PDT
EWS
Comment 3 2023-05-27 09:21:37 PDT
Committed 264629@main (74481ec4b075): <https://commits.webkit.org/264629@main> Reviewed commits have been landed. Closing PR #14409 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.